final compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> assignment
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_loop
Rule 8     statement -> for_loop
Rule 9     assignment -> TT_identifier TT_equ expression
Rule 10    assignment -> TT_identifier TT_equ TT_float
Rule 11    assignment -> TT_identifier TT_equ TT_int
Rule 12    if_statement -> TT_if expression TT_colon statement_list elif_clauses else_clause
Rule 13    elif_clauses -> elif_clauses TT_elif expression TT_colon statement_list
Rule 14    elif_clauses -> empty
Rule 15    else_clause -> TT_else TT_colon statement_list
Rule 16    else_clause -> empty
Rule 17    while_loop -> TT_while expression TT_colon statement_list
Rule 18    for_loop -> TT_for TT_identifier TT_in expression TT_colon statement_list
Rule 19    expression -> expression TT_plus expression
Rule 20    expression -> expression TT_sub expression
Rule 21    expression -> expression TT_mul expression
Rule 22    expression -> expression TT_div expression
Rule 23    expression -> expression TT_pow expression
Rule 24    expression -> expression TT_dequ expression
Rule 25    expression -> expression TT_less expression
Rule 26    expression -> expression TT_greater expression
Rule 27    expression -> expression TT_leq expression
Rule 28    expression -> expression TT_geq expression
Rule 29    expression -> array_access
Rule 30    expression -> TT_int
Rule 31    expression -> TT_string
Rule 32    expression -> TT_float
Rule 33    expression -> TT_identifier
Rule 34    expression -> array
Rule 35    array -> TT_lbracket elements TT_rbracket
Rule 36    array_access -> TT_identifier TT_lbracket expression TT_rbracket
Rule 37    elements -> elements TT_comma expression
Rule 38    elements -> expression
Rule 39    elements -> empty
Rule 40    print_statement -> TT_print TT_lparen expression TT_rparen
Rule 41    print_statement -> TT_print TT_lparen TT_string TT_rparen
Rule 42    print_statement -> TT_print TT_lparen TT_float TT_rparen
Rule 43    print_statement -> TT_print TT_lparen TT_int TT_rparen
Rule 44    print_statement -> TT_print TT_lparen TT_identifier TT_rparen
Rule 45    empty -> <empty>

Terminals, with rules where they appear

TT_colon             : 12 13 15 17 18
TT_comma             : 37
TT_dequ              : 24
TT_div               : 22
TT_elif              : 13
TT_else              : 15
TT_equ               : 9 10 11
TT_float             : 10 32 42
TT_for               : 18
TT_geq               : 28
TT_greater           : 26
TT_identifier        : 9 10 11 18 33 36 44
TT_if                : 12
TT_in                : 18
TT_int               : 11 30 43
TT_lbracket          : 35 36
TT_leq               : 27
TT_less              : 25
TT_lparen            : 40 41 42 43 44
TT_mul               : 21
TT_plus              : 19
TT_pow               : 23
TT_print             : 40 41 42 43 44
TT_rbracket          : 35 36
TT_rparen            : 40 41 42 43 44
TT_string            : 31 41
TT_sub               : 20
TT_while             : 17
error                : 

Nonterminals, with rules where they appear

array                : 34
array_access         : 29
assignment           : 4
elements             : 35 37
elif_clauses         : 12 13
else_clause          : 12
empty                : 14 16 39
expression           : 9 12 13 17 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 36 37 38 40
for_loop             : 8
if_statement         : 6
print_statement      : 5
program              : 0
statement            : 2 3
statement_list       : 1 2 12 13 15 17 18
while_loop           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_loop
    (8) statement -> . for_loop
    (9) assignment -> . TT_identifier TT_equ expression
    (10) assignment -> . TT_identifier TT_equ TT_float
    (11) assignment -> . TT_identifier TT_equ TT_int
    (40) print_statement -> . TT_print TT_lparen expression TT_rparen
    (41) print_statement -> . TT_print TT_lparen TT_string TT_rparen
    (42) print_statement -> . TT_print TT_lparen TT_float TT_rparen
    (43) print_statement -> . TT_print TT_lparen TT_int TT_rparen
    (44) print_statement -> . TT_print TT_lparen TT_identifier TT_rparen
    (12) if_statement -> . TT_if expression TT_colon statement_list elif_clauses else_clause
    (17) while_loop -> . TT_while expression TT_colon statement_list
    (18) for_loop -> . TT_for TT_identifier TT_in expression TT_colon statement_list

    TT_identifier   shift and go to state 9
    TT_print        shift and go to state 10
    TT_if           shift and go to state 11
    TT_while        shift and go to state 12
    TT_for          shift and go to state 13

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . while_loop
    (8) statement -> . for_loop
    (9) assignment -> . TT_identifier TT_equ expression
    (10) assignment -> . TT_identifier TT_equ TT_float
    (11) assignment -> . TT_identifier TT_equ TT_int
    (40) print_statement -> . TT_print TT_lparen expression TT_rparen
    (41) print_statement -> . TT_print TT_lparen TT_string TT_rparen
    (42) print_statement -> . TT_print TT_lparen TT_float TT_rparen
    (43) print_statement -> . TT_print TT_lparen TT_int TT_rparen
    (44) print_statement -> . TT_print TT_lparen TT_identifier TT_rparen
    (12) if_statement -> . TT_if expression TT_colon statement_list elif_clauses else_clause
    (17) while_loop -> . TT_while expression TT_colon statement_list
    (18) for_loop -> . TT_for TT_identifier TT_in expression TT_colon statement_list

    $end            reduce using rule 1 (program -> statement_list .)
    TT_identifier   shift and go to state 9
    TT_print        shift and go to state 10
    TT_if           shift and go to state 11
    TT_while        shift and go to state 12
    TT_for          shift and go to state 13

    statement                      shift and go to state 14
    assignment                     shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    while_loop                     shift and go to state 7
    for_loop                       shift and go to state 8

state 3

    (3) statement_list -> statement .

    TT_identifier   reduce using rule 3 (statement_list -> statement .)
    TT_print        reduce using rule 3 (statement_list -> statement .)
    TT_if           reduce using rule 3 (statement_list -> statement .)
    TT_while        reduce using rule 3 (statement_list -> statement .)
    TT_for          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    TT_elif         reduce using rule 3 (statement_list -> statement .)
    TT_else         reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    TT_identifier   reduce using rule 4 (statement -> assignment .)
    TT_print        reduce using rule 4 (statement -> assignment .)
    TT_if           reduce using rule 4 (statement -> assignment .)
    TT_while        reduce using rule 4 (statement -> assignment .)
    TT_for          reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    TT_elif         reduce using rule 4 (statement -> assignment .)
    TT_else         reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> print_statement .

    TT_identifier   reduce using rule 5 (statement -> print_statement .)
    TT_print        reduce using rule 5 (statement -> print_statement .)
    TT_if           reduce using rule 5 (statement -> print_statement .)
    TT_while        reduce using rule 5 (statement -> print_statement .)
    TT_for          reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    TT_elif         reduce using rule 5 (statement -> print_statement .)
    TT_else         reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    TT_identifier   reduce using rule 6 (statement -> if_statement .)
    TT_print        reduce using rule 6 (statement -> if_statement .)
    TT_if           reduce using rule 6 (statement -> if_statement .)
    TT_while        reduce using rule 6 (statement -> if_statement .)
    TT_for          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    TT_elif         reduce using rule 6 (statement -> if_statement .)
    TT_else         reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_loop .

    TT_identifier   reduce using rule 7 (statement -> while_loop .)
    TT_print        reduce using rule 7 (statement -> while_loop .)
    TT_if           reduce using rule 7 (statement -> while_loop .)
    TT_while        reduce using rule 7 (statement -> while_loop .)
    TT_for          reduce using rule 7 (statement -> while_loop .)
    $end            reduce using rule 7 (statement -> while_loop .)
    TT_elif         reduce using rule 7 (statement -> while_loop .)
    TT_else         reduce using rule 7 (statement -> while_loop .)


state 8

    (8) statement -> for_loop .

    TT_identifier   reduce using rule 8 (statement -> for_loop .)
    TT_print        reduce using rule 8 (statement -> for_loop .)
    TT_if           reduce using rule 8 (statement -> for_loop .)
    TT_while        reduce using rule 8 (statement -> for_loop .)
    TT_for          reduce using rule 8 (statement -> for_loop .)
    $end            reduce using rule 8 (statement -> for_loop .)
    TT_elif         reduce using rule 8 (statement -> for_loop .)
    TT_else         reduce using rule 8 (statement -> for_loop .)


state 9

    (9) assignment -> TT_identifier . TT_equ expression
    (10) assignment -> TT_identifier . TT_equ TT_float
    (11) assignment -> TT_identifier . TT_equ TT_int

    TT_equ          shift and go to state 15


state 10

    (40) print_statement -> TT_print . TT_lparen expression TT_rparen
    (41) print_statement -> TT_print . TT_lparen TT_string TT_rparen
    (42) print_statement -> TT_print . TT_lparen TT_float TT_rparen
    (43) print_statement -> TT_print . TT_lparen TT_int TT_rparen
    (44) print_statement -> TT_print . TT_lparen TT_identifier TT_rparen

    TT_lparen       shift and go to state 16


state 11

    (12) if_statement -> TT_if . expression TT_colon statement_list elif_clauses else_clause
    (19) expression -> . expression TT_plus expression
    (20) expression -> . expression TT_sub expression
    (21) expression -> . expression TT_mul expression
    (22) expression -> . expression TT_div expression
    (23) expression -> . expression TT_pow expression
    (24) expression -> . expression TT_dequ expression
    (25) expression -> . expression TT_less expression
    (26) expression -> . expression TT_greater expression
    (27) expression -> . expression TT_leq expression
    (28) expression -> . expression TT_geq expression
    (29) expression -> . array_access
    (30) expression -> . TT_int
    (31) expression -> . TT_string
    (32) expression -> . TT_float
    (33) expression -> . TT_identifier
    (34) expression -> . array
    (36) array_access -> . TT_identifier TT_lbracket expression TT_rbracket
    (35) array -> . TT_lbracket elements TT_rbracket

    TT_int          shift and go to state 19
    TT_string       shift and go to state 20
    TT_float        shift and go to state 21
    TT_identifier   shift and go to state 22
    TT_lbracket     shift and go to state 24

    expression                     shift and go to state 17
    array_access                   shift and go to state 18
    array                          shift and go to state 23

state 12

    (17) while_loop -> TT_while . expression TT_colon statement_list
    (19) expression -> . expression TT_plus expression
    (20) expression -> . expression TT_sub expression
    (21) expression -> . expression TT_mul expression
    (22) expression -> . expression TT_div expression
    (23) expression -> . expression TT_pow expression
    (24) expression -> . expression TT_dequ expression
    (25) expression -> . expression TT_less expression
    (26) expression -> . expression TT_greater expression
    (27) expression -> . expression TT_leq expression
    (28) expression -> . expression TT_geq expression
    (29) expression -> . array_access
    (30) expression -> . TT_int
    (31) expression -> . TT_string
    (32) expression -> . TT_float
    (33) expression -> . TT_identifier
    (34) expression -> . array
    (36) array_access -> . TT_identifier TT_lbracket expression TT_rbracket
    (35) array -> . TT_lbracket elements TT_rbracket

    TT_int          shift and go to state 19
    TT_string       shift and go to state 20
    TT_float        shift and go to state 21
    TT_identifier   shift and go to state 22
    TT_lbracket     shift and go to state 24

    expression                     shift and go to state 25
    array_access                   shift and go to state 18
    array                          shift and go to state 23

state 13

    (18) for_loop -> TT_for . TT_identifier TT_in expression TT_colon statement_list

    TT_identifier   shift and go to state 26


state 14

    (2) statement_list -> statement_list statement .

    TT_identifier   reduce using rule 2 (statement_list -> statement_list statement .)
    TT_print        reduce using rule 2 (statement_list -> statement_list statement .)
    TT_if           reduce using rule 2 (statement_list -> statement_list statement .)
    TT_while        reduce using rule 2 (statement_list -> statement_list statement .)
    TT_for          reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    TT_elif         reduce using rule 2 (statement_list -> statement_list statement .)
    TT_else         reduce using rule 2 (statement_list -> statement_list statement .)


state 15

    (9) assignment -> TT_identifier TT_equ . expression
    (10) assignment -> TT_identifier TT_equ . TT_float
    (11) assignment -> TT_identifier TT_equ . TT_int
    (19) expression -> . expression TT_plus expression
    (20) expression -> . expression TT_sub expression
    (21) expression -> . expression TT_mul expression
    (22) expression -> . expression TT_div expression
    (23) expression -> . expression TT_pow expression
    (24) expression -> . expression TT_dequ expression
    (25) expression -> . expression TT_less expression
    (26) expression -> . expression TT_greater expression
    (27) expression -> . expression TT_leq expression
    (28) expression -> . expression TT_geq expression
    (29) expression -> . array_access
    (30) expression -> . TT_int
    (31) expression -> . TT_string
    (32) expression -> . TT_float
    (33) expression -> . TT_identifier
    (34) expression -> . array
    (36) array_access -> . TT_identifier TT_lbracket expression TT_rbracket
    (35) array -> . TT_lbracket elements TT_rbracket

    TT_float        shift and go to state 28
    TT_int          shift and go to state 29
    TT_string       shift and go to state 20
    TT_identifier   shift and go to state 22
    TT_lbracket     shift and go to state 24

    expression                     shift and go to state 27
    array_access                   shift and go to state 18
    array                          shift and go to state 23

state 16

    (40) print_statement -> TT_print TT_lparen . expression TT_rparen
    (41) print_statement -> TT_print TT_lparen . TT_string TT_rparen
    (42) print_statement -> TT_print TT_lparen . TT_float TT_rparen
    (43) print_statement -> TT_print TT_lparen . TT_int TT_rparen
    (44) print_statement -> TT_print TT_lparen . TT_identifier TT_rparen
    (19) expression -> . expression TT_plus expression
    (20) expression -> . expression TT_sub expression
    (21) expression -> . expression TT_mul expression
    (22) expression -> . expression TT_div expression
    (23) expression -> . expression TT_pow expression
    (24) expression -> . expression TT_dequ expression
    (25) expression -> . expression TT_less expression
    (26) expression -> . expression TT_greater expression
    (27) expression -> . expression TT_leq expression
    (28) expression -> . expression TT_geq expression
    (29) expression -> . array_access
    (30) expression -> . TT_int
    (31) expression -> . TT_string
    (32) expression -> . TT_float
    (33) expression -> . TT_identifier
    (34) expression -> . array
    (36) array_access -> . TT_identifier TT_lbracket expression TT_rbracket
    (35) array -> . TT_lbracket elements TT_rbracket

    TT_string       shift and go to state 31
    TT_float        shift and go to state 32
    TT_int          shift and go to state 33
    TT_identifier   shift and go to state 34
    TT_lbracket     shift and go to state 24

    expression                     shift and go to state 30
    array_access                   shift and go to state 18
    array                          shift and go to state 23

state 17

    (12) if_statement -> TT_if expression . TT_colon statement_list elif_clauses else_clause
    (19) expression -> expression . TT_plus expression
    (20) expression -> expression . TT_sub expression
    (21) expression -> expression . TT_mul expression
    (22) expression -> expression . TT_div expression
    (23) expression -> expression . TT_pow expression
    (24) expression -> expression . TT_dequ expression
    (25) expression -> expression . TT_less expression
    (26) expression -> expression . TT_greater expression
    (27) expression -> expression . TT_leq expression
    (28) expression -> expression . TT_geq expression

    TT_colon        shift and go to state 35
    TT_plus         shift and go to state 36
    TT_sub          shift and go to state 37
    TT_mul          shift and go to state 38
    TT_div          shift and go to state 39
    TT_pow          shift and go to state 40
    TT_dequ         shift and go to state 41
    TT_less         shift and go to state 42
    TT_greater      shift and go to state 43
    TT_leq          shift and go to state 44
    TT_geq          shift and go to state 45


state 18

    (29) expression -> array_access .

    TT_colon        reduce using rule 29 (expression -> array_access .)
    TT_plus         reduce using rule 29 (expression -> array_access .)
    TT_sub          reduce using rule 29 (expression -> array_access .)
    TT_mul          reduce using rule 29 (expression -> array_access .)
    TT_div          reduce using rule 29 (expression -> array_access .)
    TT_pow          reduce using rule 29 (expression -> array_access .)
    TT_dequ         reduce using rule 29 (expression -> array_access .)
    TT_less         reduce using rule 29 (expression -> array_access .)
    TT_greater      reduce using rule 29 (expression -> array_access .)
    TT_leq          reduce using rule 29 (expression -> array_access .)
    TT_geq          reduce using rule 29 (expression -> array_access .)
    TT_identifier   reduce using rule 29 (expression -> array_access .)
    TT_print        reduce using rule 29 (expression -> array_access .)
    TT_if           reduce using rule 29 (expression -> array_access .)
    TT_while        reduce using rule 29 (expression -> array_access .)
    TT_for          reduce using rule 29 (expression -> array_access .)
    $end            reduce using rule 29 (expression -> array_access .)
    TT_elif         reduce using rule 29 (expression -> array_access .)
    TT_else         reduce using rule 29 (expression -> array_access .)
    TT_rparen       reduce using rule 29 (expression -> array_access .)
    TT_rbracket     reduce using rule 29 (expression -> array_access .)
    TT_comma        reduce using rule 29 (expression -> array_access .)


state 19

    (30) expression -> TT_int .

    TT_colon        reduce using rule 30 (expression -> TT_int .)
    TT_plus         reduce using rule 30 (expression -> TT_int .)
    TT_sub          reduce using rule 30 (expression -> TT_int .)
    TT_mul          reduce using rule 30 (expression -> TT_int .)
    TT_div          reduce using rule 30 (expression -> TT_int .)
    TT_pow          reduce using rule 30 (expression -> TT_int .)
    TT_dequ         reduce using rule 30 (expression -> TT_int .)
    TT_less         reduce using rule 30 (expression -> TT_int .)
    TT_greater      reduce using rule 30 (expression -> TT_int .)
    TT_leq          reduce using rule 30 (expression -> TT_int .)
    TT_geq          reduce using rule 30 (expression -> TT_int .)
    TT_rbracket     reduce using rule 30 (expression -> TT_int .)
    TT_comma        reduce using rule 30 (expression -> TT_int .)
    TT_identifier   reduce using rule 30 (expression -> TT_int .)
    TT_print        reduce using rule 30 (expression -> TT_int .)
    TT_if           reduce using rule 30 (expression -> TT_int .)
    TT_while        reduce using rule 30 (expression -> TT_int .)
    TT_for          reduce using rule 30 (expression -> TT_int .)
    $end            reduce using rule 30 (expression -> TT_int .)
    TT_elif         reduce using rule 30 (expression -> TT_int .)
    TT_else         reduce using rule 30 (expression -> TT_int .)
    TT_rparen       reduce using rule 30 (expression -> TT_int .)


state 20

    (31) expression -> TT_string .

    TT_colon        reduce using rule 31 (expression -> TT_string .)
    TT_plus         reduce using rule 31 (expression -> TT_string .)
    TT_sub          reduce using rule 31 (expression -> TT_string .)
    TT_mul          reduce using rule 31 (expression -> TT_string .)
    TT_div          reduce using rule 31 (expression -> TT_string .)
    TT_pow          reduce using rule 31 (expression -> TT_string .)
    TT_dequ         reduce using rule 31 (expression -> TT_string .)
    TT_less         reduce using rule 31 (expression -> TT_string .)
    TT_greater      reduce using rule 31 (expression -> TT_string .)
    TT_leq          reduce using rule 31 (expression -> TT_string .)
    TT_geq          reduce using rule 31 (expression -> TT_string .)
    TT_identifier   reduce using rule 31 (expression -> TT_string .)
    TT_print        reduce using rule 31 (expression -> TT_string .)
    TT_if           reduce using rule 31 (expression -> TT_string .)
    TT_while        reduce using rule 31 (expression -> TT_string .)
    TT_for          reduce using rule 31 (expression -> TT_string .)
    $end            reduce using rule 31 (expression -> TT_string .)
    TT_elif         reduce using rule 31 (expression -> TT_string .)
    TT_else         reduce using rule 31 (expression -> TT_string .)
    TT_rbracket     reduce using rule 31 (expression -> TT_string .)
    TT_comma        reduce using rule 31 (expression -> TT_string .)
    TT_rparen       reduce using rule 31 (expression -> TT_string .)


state 21

    (32) expression -> TT_float .

    TT_colon        reduce using rule 32 (expression -> TT_float .)
    TT_plus         reduce using rule 32 (expression -> TT_float .)
    TT_sub          reduce using rule 32 (expression -> TT_float .)
    TT_mul          reduce using rule 32 (expression -> TT_float .)
    TT_div          reduce using rule 32 (expression -> TT_float .)
    TT_pow          reduce using rule 32 (expression -> TT_float .)
    TT_dequ         reduce using rule 32 (expression -> TT_float .)
    TT_less         reduce using rule 32 (expression -> TT_float .)
    TT_greater      reduce using rule 32 (expression -> TT_float .)
    TT_leq          reduce using rule 32 (expression -> TT_float .)
    TT_geq          reduce using rule 32 (expression -> TT_float .)
    TT_rbracket     reduce using rule 32 (expression -> TT_float .)
    TT_comma        reduce using rule 32 (expression -> TT_float .)
    TT_identifier   reduce using rule 32 (expression -> TT_float .)
    TT_print        reduce using rule 32 (expression -> TT_float .)
    TT_if           reduce using rule 32 (expression -> TT_float .)
    TT_while        reduce using rule 32 (expression -> TT_float .)
    TT_for          reduce using rule 32 (expression -> TT_float .)
    $end            reduce using rule 32 (expression -> TT_float .)
    TT_elif         reduce using rule 32 (expression -> TT_float .)
    TT_else         reduce using rule 32 (expression -> TT_float .)
    TT_rparen       reduce using rule 32 (expression -> TT_float .)


state 22

    (33) expression -> TT_identifier .
    (36) array_access -> TT_identifier . TT_lbracket expression TT_rbracket

    TT_colon        reduce using rule 33 (expression -> TT_identifier .)
    TT_plus         reduce using rule 33 (expression -> TT_identifier .)
    TT_sub          reduce using rule 33 (expression -> TT_identifier .)
    TT_mul          reduce using rule 33 (expression -> TT_identifier .)
    TT_div          reduce using rule 33 (expression -> TT_identifier .)
    TT_pow          reduce using rule 33 (expression -> TT_identifier .)
    TT_dequ         reduce using rule 33 (expression -> TT_identifier .)
    TT_less         reduce using rule 33 (expression -> TT_identifier .)
    TT_greater      reduce using rule 33 (expression -> TT_identifier .)
    TT_leq          reduce using rule 33 (expression -> TT_identifier .)
    TT_geq          reduce using rule 33 (expression -> TT_identifier .)
    TT_identifier   reduce using rule 33 (expression -> TT_identifier .)
    TT_print        reduce using rule 33 (expression -> TT_identifier .)
    TT_if           reduce using rule 33 (expression -> TT_identifier .)
    TT_while        reduce using rule 33 (expression -> TT_identifier .)
    TT_for          reduce using rule 33 (expression -> TT_identifier .)
    $end            reduce using rule 33 (expression -> TT_identifier .)
    TT_elif         reduce using rule 33 (expression -> TT_identifier .)
    TT_else         reduce using rule 33 (expression -> TT_identifier .)
    TT_rbracket     reduce using rule 33 (expression -> TT_identifier .)
    TT_comma        reduce using rule 33 (expression -> TT_identifier .)
    TT_rparen       reduce using rule 33 (expression -> TT_identifier .)
    TT_lbracket     shift and go to state 46


state 23

    (34) expression -> array .

    TT_colon        reduce using rule 34 (expression -> array .)
    TT_plus         reduce using rule 34 (expression -> array .)
    TT_sub          reduce using rule 34 (expression -> array .)
    TT_mul          reduce using rule 34 (expression -> array .)
    TT_div          reduce using rule 34 (expression -> array .)
    TT_pow          reduce using rule 34 (expression -> array .)
    TT_dequ         reduce using rule 34 (expression -> array .)
    TT_less         reduce using rule 34 (expression -> array .)
    TT_greater      reduce using rule 34 (expression -> array .)
    TT_leq          reduce using rule 34 (expression -> array .)
    TT_geq          reduce using rule 34 (expression -> array .)
    TT_identifier   reduce using rule 34 (expression -> array .)
    TT_print        reduce using rule 34 (expression -> array .)
    TT_if           reduce using rule 34 (expression -> array .)
    TT_while        reduce using rule 34 (expression -> array .)
